--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>회원가입</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <script src="/script.js"></script>
+    <div class="container">
+      <h1>회원가입</h1>
+      <form id="signup-form">
+        <div class="form-group">
+          <div class="group">
+            <label for="username">아이디:</label>
+            <input type="text" id="username" name="username" placeholder="아이디를 입력해주세요" required />
+            <button type="button" id="check-username">중복 체크</button>
+          </div>
+          <small id="username-feedback" class="feedback"></small>
+        </div>
+        <div class="form-group">
+          <div>
+            <label for="password">비밀번호:</label>
+            <input type="password" id="password" name="password" placeholder="비밀번호를 입력해주세요" required />
+          </div>
+          <small id="password-feedback" class="feedback"></small>
+        </div>
+        <div class="form-group">
+          <div class="group">
+            <label for="confirm-password">비밀번호 확인:</label>
+            <input
+              type="password"
+              id="confirm-password"
+              name="confirm-password"
+              placeholder="비밀번호를 재입력해주세요"
+              required
+            />
+            <button type="submit">가입하기</button>
+          </div>
+
+          <small id="confirm-password-feedback" class="feedback"></small>
+        </div>
+      </form>
+    </div>
+    <script src="script.js"></script>
   </body>
 </html>
